# context-aware-demo

./: Cargo.toml  Makefile  README.md  e2e.bats  metadata.yml
.github/workflows/: release.yml  test.yml
src/: lib.rs  settings.rs
test_data/: namespace.yaml  pod_creation_all_labels.json  pod_creation_mising_labels.json  pod_creation_missing_labels.json
