[package]
name = "context-aware-policy-demo"
version = "0.1.1"
authors = ["Flavio Castelli <fcastelli@suse.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
k8s-openapi = { version = "0.20.0", default_features = false, features = ["v1_24"] }
kubewarden-policy-sdk = "0.9.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
mockall = "0.12"
serial_test = "3.0"
rstest = "0.18"
