[package]
name = "context-aware-policy-demo"
version = "0.1.9"
authors = ["Flavio Castelli <fcastelli@suse.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
k8s-openapi = { version = "0.27.0", default-features = false, features = [
  "v1_32",
] }
kubewarden-policy-sdk = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
mockall = "0.14"
serial_test = "3.1"
rstest = "0.26"
